--- a/allclasses-frame.html
+++ b/allclasses-frame.html
@@ -26,6 +26,7 @@
 <li><a href="mitiv/linalg/ArrayOps.html" title="class in mitiv.linalg" target="classFrame">ArrayOps</a></li>
 <li><a href="mitiv/array/ArrayUtils.html" title="class in mitiv.array" target="classFrame">ArrayUtils</a></li>
 <li><a href="mitiv/base/BaseUtils.html" title="class in mitiv.base" target="classFrame">BaseUtils</a></li>
+<li><a href="mitiv/optim/BLMVM.html" title="class in mitiv.optim" target="classFrame">BLMVM</a></li>
 <li><a href="mitiv/base/indexing/BoundaryConditions.html" title="enum in mitiv.base.indexing" target="classFrame">BoundaryConditions</a></li>
 <li><a href="mitiv/optim/BoundProjector.html" title="class in mitiv.optim" target="classFrame">BoundProjector</a></li>
 <li><a href="mitiv/io/BufferedImageUtils.html" title="class in mitiv.io" target="classFrame">BufferedImageUtils</a></li>
@@ -51,9 +52,12 @@
 <li><a href="mitiv/base/indexing/CompiledRange.html" title="class in mitiv.base.indexing" target="classFrame">CompiledRange</a></li>
 <li><a href="mitiv/cost/CompositeDifferentiableCostFunction.html" title="class in mitiv.cost" target="classFrame">CompositeDifferentiableCostFunction</a></li>
 <li><a href="mitiv/optim/ConvexSetProjector.html" title="class in mitiv.optim" target="classFrame">ConvexSetProjector</a></li>
+<li><a href="mitiv/deconv/Convolution.html" title="class in mitiv.deconv" target="classFrame">Convolution</a></li>
+<li><a href="mitiv/deconv/impl/ConvolutionDouble.html" title="class in mitiv.deconv.impl" target="classFrame">ConvolutionDouble</a></li>
 <li><a href="mitiv/deconv/impl/ConvolutionDouble1D.html" title="class in mitiv.deconv.impl" target="classFrame">ConvolutionDouble1D</a></li>
 <li><a href="mitiv/deconv/impl/ConvolutionDouble2D.html" title="class in mitiv.deconv.impl" target="classFrame">ConvolutionDouble2D</a></li>
 <li><a href="mitiv/deconv/impl/ConvolutionDouble3D.html" title="class in mitiv.deconv.impl" target="classFrame">ConvolutionDouble3D</a></li>
+<li><a href="mitiv/deconv/impl/ConvolutionFloat.html" title="class in mitiv.deconv.impl" target="classFrame">ConvolutionFloat</a></li>
 <li><a href="mitiv/deconv/impl/ConvolutionFloat1D.html" title="class in mitiv.deconv.impl" target="classFrame">ConvolutionFloat1D</a></li>
 <li><a href="mitiv/deconv/impl/ConvolutionFloat2D.html" title="class in mitiv.deconv.impl" target="classFrame">ConvolutionFloat2D</a></li>
 <li><a href="mitiv/deconv/impl/ConvolutionFloat3D.html" title="class in mitiv.deconv.impl" target="classFrame">ConvolutionFloat3D</a></li>
@@ -155,6 +159,7 @@
 <li><a href="mitiv/linalg/shaped/FloatShapedVector.html" title="class in mitiv.linalg.shaped" target="classFrame">FloatShapedVector</a></li>
 <li><a href="mitiv/linalg/shaped/FloatShapedVectorSpace.html" title="class in mitiv.linalg.shaped" target="classFrame">FloatShapedVectorSpace</a></li>
 <li><a href="mitiv/io/FormatOptions.html" title="class in mitiv.io" target="classFrame">FormatOptions</a></li>
+<li><a href="mitiv/optim/GeneralBounds.html" title="class in mitiv.optim" target="classFrame">GeneralBounds</a></li>
 <li><a href="mitiv/cost/GradientChecker.html" title="class in mitiv.cost" target="classFrame">GradientChecker</a></li>
 <li><a href="mitiv/array/impl/Helper.html" title="class in mitiv.array.impl" target="classFrame">Helper</a></li>
 <li><a href="mitiv/cost/HyperbolicTotalVariation.html" title="class in mitiv.cost" target="classFrame">HyperbolicTotalVariation</a></li>
@@ -180,7 +185,6 @@
 <li><a href="mitiv/base/mapping/IntScanner.html" title="interface in mitiv.base.mapping" target="classFrame"><i>IntScanner</i></a></li>
 <li><a href="mitiv/optim/InverseHessianApproximation.html" title="enum in mitiv.optim" target="classFrame">InverseHessianApproximation</a></li>
 <li><a href="mitiv/optim/LBFGS.html" title="class in mitiv.optim" target="classFrame">LBFGS</a></li>
-<li><a href="mitiv/optim/LBFGSB.html" title="class in mitiv.optim" target="classFrame">LBFGSB</a></li>
 <li><a href="mitiv/optim/LBFGSOperator.html" title="class in mitiv.optim" target="classFrame">LBFGSOperator</a></li>
 <li><a href="mitiv/invpb/LeftHandSideMatrix.html" title="class in mitiv.invpb" target="classFrame">LeftHandSideMatrix</a></li>
 <li><a href="mitiv/tests/LinearConjGradTest.html" title="class in mitiv.tests" target="classFrame">LinearConjGradTest</a></li>
@@ -188,6 +192,7 @@
 <li><a href="mitiv/invpb/LinearDeconvolver.html" title="class in mitiv.invpb" target="classFrame">LinearDeconvolver</a></li>
 <li><a href="mitiv/linalg/LinearOperator.html" title="class in mitiv.linalg" target="classFrame">LinearOperator</a></li>
 <li><a href="mitiv/optim/LineSearch.html" title="class in mitiv.optim" target="classFrame">LineSearch</a></li>
+<li><a href="mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim" target="classFrame">LineSearchStatus</a></li>
 <li><a href="mitiv/array/Long1D.html" title="class in mitiv.array" target="classFrame">Long1D</a></li>
 <li><a href="mitiv/array/Long2D.html" title="class in mitiv.array" target="classFrame">Long2D</a></li>
 <li><a href="mitiv/array/Long3D.html" title="class in mitiv.array" target="classFrame">Long3D</a></li>
@@ -213,6 +218,7 @@
 <li><a href="mitiv/utils/NavigableImagePanel.ZoomDevice.html" title="class in mitiv.utils" target="classFrame">NavigableImagePanel.ZoomDevice</a></li>
 <li><a href="mitiv/exception/NonConformableArrayException.html" title="class in mitiv.exception" target="classFrame">NonConformableArrayException</a></li>
 <li><a href="mitiv/optim/NonLinearConjugateGradient.html" title="class in mitiv.optim" target="classFrame">NonLinearConjugateGradient</a></li>
+<li><a href="mitiv/optim/NonmonotoneLineSearch.html" title="class in mitiv.optim" target="classFrame">NonmonotoneLineSearch</a></li>
 <li><a href="mitiv/random/NormalDistribution.html" title="class in mitiv.random" target="classFrame">NormalDistribution</a></li>
 <li><a href="mitiv/exception/NotImplementedException.html" title="class in mitiv.exception" target="classFrame">NotImplementedException</a></li>
 <li><a href="mitiv/optim/OptimTask.html" title="enum in mitiv.optim" target="classFrame">OptimTask</a></li>
@@ -229,10 +235,14 @@
 <li><a href="mitiv/linalg/RankOneOperator.html" title="class in mitiv.linalg" target="classFrame">RankOneOperator</a></li>
 <li><a href="mitiv/linalg/shaped/RealComplexFFT.html" title="class in mitiv.linalg.shaped" target="classFrame">RealComplexFFT</a></li>
 <li><a href="mitiv/invpb/ReconstructionJob.html" title="interface in mitiv.invpb" target="classFrame"><i>ReconstructionJob</i></a></li>
+<li><a href="mitiv/utils/reconstruction/ReconstructionJob.html" title="class in mitiv.utils.reconstruction" target="classFrame">ReconstructionJob</a></li>
 <li><a href="mitiv/invpb/ReconstructionSynchronizer.html" title="class in mitiv.invpb" target="classFrame">ReconstructionSynchronizer</a></li>
+<li><a href="mitiv/utils/reconstruction/ReconstructionThread.html" title="class in mitiv.utils.reconstruction" target="classFrame">ReconstructionThread</a></li>
+<li><a href="mitiv/utils/reconstruction/ReconstructionThreadToken.html" title="class in mitiv.utils.reconstruction" target="classFrame">ReconstructionThreadToken</a></li>
 <li><a href="mitiv/invpb/ReconstructionViewer.html" title="interface in mitiv.invpb" target="classFrame"><i>ReconstructionViewer</i></a></li>
 <li><a href="mitiv/exception/RecoverableFormatException.html" title="class in mitiv.exception" target="classFrame">RecoverableFormatException</a></li>
-<li><a href="mitiv/optim/ReverseCommunicationOptimizer.html" title="interface in mitiv.optim" target="classFrame"><i>ReverseCommunicationOptimizer</i></a></li>
+<li><a href="mitiv/optim/ReverseCommunicationOptimizer.html" title="class in mitiv.optim" target="classFrame">ReverseCommunicationOptimizer</a></li>
+<li><a href="mitiv/optim/ReverseCommunicationOptimizerWithLineSearch.html" title="class in mitiv.optim" target="classFrame">ReverseCommunicationOptimizerWithLineSearch</a></li>
 <li><a href="mitiv/array/Scalar.html" title="class in mitiv.array" target="classFrame">Scalar</a></li>
 <li><a href="mitiv/linalg/ScaleOperator.html" title="class in mitiv.linalg" target="classFrame">ScaleOperator</a></li>
 <li><a href="mitiv/array/impl/SelectedByte1D.html" title="class in mitiv.array.impl" target="classFrame">SelectedByte1D</a></li>
@@ -376,10 +386,19 @@
 <li><a href="mitiv/random/UniformDistribution.html" title="class in mitiv.random" target="classFrame">UniformDistribution</a></li>
 <li><a href="mitiv/linalg/Vector.html" title="class in mitiv.linalg" target="classFrame">Vector</a></li>
 <li><a href="mitiv/linalg/VectorSpace.html" title="class in mitiv.linalg" target="classFrame">VectorSpace</a></li>
-<li><a href="mitiv/deconv/WeightedConvolutionOperator.html" title="class in mitiv.deconv" target="classFrame">WeightedConvolutionOperator</a></li>
+<li><a href="mitiv/optim/VMLMB.html" title="class in mitiv.optim" target="classFrame">VMLMB</a></li>
+<li><a href="mitiv/deconv/WeightedConvolutionCost.html" title="class in mitiv.deconv" target="classFrame">WeightedConvolutionCost</a></li>
+<li><a href="mitiv/deconv/impl/WeightedConvolutionDouble.html" title="class in mitiv.deconv.impl" target="classFrame">WeightedConvolutionDouble</a></li>
+<li><a href="mitiv/deconv/impl/WeightedConvolutionDouble1D.html" title="class in mitiv.deconv.impl" target="classFrame">WeightedConvolutionDouble1D</a></li>
+<li><a href="mitiv/deconv/impl/WeightedConvolutionDouble2D.html" title="class in mitiv.deconv.impl" target="classFrame">WeightedConvolutionDouble2D</a></li>
+<li><a href="mitiv/deconv/impl/WeightedConvolutionDouble3D.html" title="class in mitiv.deconv.impl" target="classFrame">WeightedConvolutionDouble3D</a></li>
+<li><a href="mitiv/deconv/impl/WeightedConvolutionFloat.html" title="class in mitiv.deconv.impl" target="classFrame">WeightedConvolutionFloat</a></li>
+<li><a href="mitiv/deconv/impl/WeightedConvolutionFloat1D.html" title="class in mitiv.deconv.impl" target="classFrame">WeightedConvolutionFloat1D</a></li>
+<li><a href="mitiv/deconv/impl/WeightedConvolutionFloat2D.html" title="class in mitiv.deconv.impl" target="classFrame">WeightedConvolutionFloat2D</a></li>
+<li><a href="mitiv/deconv/impl/WeightedConvolutionFloat3D.html" title="class in mitiv.deconv.impl" target="classFrame">WeightedConvolutionFloat3D</a></li>
 <li><a href="mitiv/linalg/WeightGenerator.html" title="class in mitiv.linalg" target="classFrame">WeightGenerator</a></li>
 <li><a href="mitiv/deconv/WeightingOperator.html" title="class in mitiv.deconv" target="classFrame">WeightingOperator</a></li>
-<li><a href="mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy" target="classFrame">Zernike1D</a></li>
+<li><a href="mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy" target="classFrame">Zernike</a></li>
 </ul>
 </div>
 </body>
