--- a/mitiv/deconv/package-summary.html
+++ b/mitiv/deconv/package-summary.html
@@ -74,32 +74,38 @@
 </tr>
 <tbody>
 <tr class="altColor">
+<td class="colFirst"><a href="../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv">Convolution</a></td>
+<td class="colLast">
+<div class="block">This class implements a linear operator to apply the convolution.</div>
+</td>
+</tr>
+<tr class="rowColor">
 <td class="colFirst"><a href="../../mitiv/deconv/ConvolutionOperator.html" title="class in mitiv.deconv">ConvolutionOperator</a></td>
 <td class="colLast">
 <div class="block">Implements a FFT-based convolution.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../mitiv/deconv/Deconvolution.html" title="class in mitiv.deconv">Deconvolution</a></td>
 <td class="colLast">&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../mitiv/deconv/DeconvUtils.html" title="class in mitiv.deconv">DeconvUtils</a></td>
 <td class="colLast">&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../mitiv/deconv/Filter.html" title="class in mitiv.deconv">Filter</a></td>
 <td class="colLast">
 <div class="block">This class contain all the methods to compute the solutions</div>
 </td>
 </tr>
-<tr class="altColor">
-<td class="colFirst"><a href="../../mitiv/deconv/WeightedConvolutionOperator.html" title="class in mitiv.deconv">WeightedConvolutionOperator</a></td>
+<tr class="rowColor">
+<td class="colFirst"><a href="../../mitiv/deconv/WeightedConvolutionCost.html" title="class in mitiv.deconv">WeightedConvolutionCost</a></td>
 <td class="colLast">
-<div class="block">Implements a FFT-based convolution.</div>
+<div class="block">Implements a quadratic cost function for models by FFT-based convolution.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../mitiv/deconv/WeightingOperator.html" title="class in mitiv.deconv">WeightingOperator</a></td>
 <td class="colLast">
 <div class="block">Weighting operator will apply a vector give to the constructor 
