--- a/mitiv/deconv/ConvolutionOperator.html
+++ b/mitiv/deconv/ConvolutionOperator.html
@@ -34,7 +34,7 @@
 </div>
 <div class="subNav">
 <ul class="navList">
-<li>PREV CLASS</li>
+<li><a href="../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv"><span class="strong">PREV CLASS</span></a></li>
 <li><a href="../../mitiv/deconv/Deconvolution.html" title="class in mitiv.deconv"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
@@ -357,13 +357,15 @@ extends <a href="../../mitiv/linalg/shaped/ShapedLinearOperator.html" title="cla
              int&nbsp;job)</pre>
 <div class="block"><strong>Description copied from class:&nbsp;<code><a href="../../mitiv/linalg/LinearOperator.html#privApply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">LinearOperator</a></code></strong></div>
 <div class="block">Apply a linear operator (or its adjoint) to a vector.
- 
- This protected method is called by the "apply" method after checking of the
- arguments.</div>
+
+ This protected method is called by the "apply" method after checking of
+ the arguments.</div>
 <dl>
 <dt><strong>Specified by:</strong></dt>
 <dd><code><a href="../../mitiv/linalg/LinearOperator.html#privApply(mitiv.linalg.Vector, mitiv.linalg.Vector, int)">privApply</a></code>&nbsp;in class&nbsp;<code><a href="../../mitiv/linalg/LinearOperator.html" title="class in mitiv.linalg">LinearOperator</a></code></dd>
-<dt><span class="strong">Parameters:</span></dt><dd><code>src</code> - the source vector</dd><dd><code>dst</code> - the destination vector</dd><dd><code>job</code> - the type of operation to apply (DIRECT, ADJOINT, etc.)</dd></dl>
+<dt><span class="strong">Parameters:</span></dt><dd><code>src</code> - - The source vector.</dd><dd><code>dst</code> - - The destination vector.</dd><dd><code>job</code> - - The type of operation to perform (<a href="../../mitiv/linalg/LinearOperator.html#DIRECT"><code>LinearOperator.DIRECT</code></a>,
+              <a href="../../mitiv/linalg/LinearOperator.html#ADJOINT"><code>LinearOperator.ADJOINT</code></a>, <code>INVERSE</code> or
+              <code>INVERSE_ADJOINT</code>).</dd></dl>
 </li>
 </ul>
 </li>
@@ -391,7 +393,7 @@ extends <a href="../../mitiv/linalg/shaped/ShapedLinearOperator.html" title="cla
 </div>
 <div class="subNav">
 <ul class="navList">
-<li>PREV CLASS</li>
+<li><a href="../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv"><span class="strong">PREV CLASS</span></a></li>
 <li><a href="../../mitiv/deconv/Deconvolution.html" title="class in mitiv.deconv"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
