--- a/allclasses-noframe.html
+++ b/allclasses-noframe.html
@@ -210,7 +210,6 @@
 <li><a href="mitiv/utils/MathUtils.html" title="class in mitiv.utils">MathUtils</a></li>
 <li><a href="mitiv/io/MdaFormat.html" title="class in mitiv.io">MdaFormat</a></li>
 <li><a href="mitiv/random/MersenneTwisterGenerator.html" title="class in mitiv.random">MersenneTwisterGenerator</a></li>
-<li><a href="mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy">MicroscopyModelPSF1D</a></li>
 <li><a href="mitiv/tests/MinPack1Tests.html" title="class in mitiv.tests">MinPack1Tests</a></li>
 <li><a href="mitiv/utils/mitivCLI.html" title="class in mitiv.utils">mitivCLI</a></li>
 <li><a href="mitiv/optim/MoreThuenteLineSearch.html" title="class in mitiv.optim">MoreThuenteLineSearch</a></li>
@@ -398,6 +397,7 @@
 <li><a href="mitiv/deconv/impl/WeightedConvolutionFloat3D.html" title="class in mitiv.deconv.impl">WeightedConvolutionFloat3D</a></li>
 <li><a href="mitiv/linalg/WeightGenerator.html" title="class in mitiv.linalg">WeightGenerator</a></li>
 <li><a href="mitiv/deconv/WeightingOperator.html" title="class in mitiv.deconv">WeightingOperator</a></li>
+<li><a href="mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy">WideFieldModel</a></li>
 <li><a href="mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy">Zernike</a></li>
 </ul>
 </div>
