--- a/mitiv/microscopy/PSF_Estimation.html
+++ b/mitiv/microscopy/PSF_Estimation.html
@@ -34,8 +34,8 @@
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
+<li>PREV CLASS</li>
+<li><a href="../../mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/microscopy/PSF_Estimation.html" target="_top">FRAMES</a></li>
@@ -276,7 +276,7 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setPupil(mitiv.microscopy.MicroscopyModelPSF1D)">setPupil</a></strong>(<a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy">MicroscopyModelPSF1D</a>&nbsp;pupil)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setPupil(mitiv.microscopy.WideFieldModel)">setPupil</a></strong>(<a href="../../mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy">WideFieldModel</a>&nbsp;pupil)</code>&nbsp;</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
@@ -550,13 +550,13 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <pre>public&nbsp;<a href="../../mitiv/invpb/ReconstructionSynchronizer.html" title="class in mitiv.invpb">ReconstructionSynchronizer</a>&nbsp;getSynchronizer()</pre>
 </li>
 </ul>
-<a name="setPupil(mitiv.microscopy.MicroscopyModelPSF1D)">
+<a name="setPupil(mitiv.microscopy.WideFieldModel)">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
 <h4>setPupil</h4>
-<pre>public&nbsp;void&nbsp;setPupil(<a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy">MicroscopyModelPSF1D</a>&nbsp;pupil)</pre>
+<pre>public&nbsp;void&nbsp;setPupil(<a href="../../mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy">WideFieldModel</a>&nbsp;pupil)</pre>
 </li>
 </ul>
 <a name="getData()">
@@ -743,8 +743,8 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
+<li>PREV CLASS</li>
+<li><a href="../../mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/microscopy/PSF_Estimation.html" target="_top">FRAMES</a></li>
