--- a/overview-tree.html
+++ b/overview-tree.html
@@ -607,7 +607,6 @@
 </li>
 <li type="circle">mitiv.utils.<a href="mitiv/utils/MathUtils.html" title="class in mitiv.utils"><span class="strong">MathUtils</span></a></li>
 <li type="circle">mitiv.io.<a href="mitiv/io/MdaFormat.html" title="class in mitiv.io"><span class="strong">MdaFormat</span></a></li>
-<li type="circle">mitiv.microscopy.<a href="mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy"><span class="strong">MicroscopyModelPSF1D</span></a></li>
 <li type="circle">mitiv.tests.<a href="mitiv/tests/MinPack1Tests.html" title="class in mitiv.tests"><span class="strong">MinPack1Tests</span></a></li>
 <li type="circle">mitiv.utils.<a href="mitiv/utils/mitivCLI.html" title="class in mitiv.utils"><span class="strong">mitivCLI</span></a></li>
 <li type="circle">mitiv.utils.<a href="mitiv/utils/NavigableImagePanel.ZoomDevice.html" title="class in mitiv.utils"><span class="strong">NavigableImagePanel.ZoomDevice</span></a></li>
@@ -727,6 +726,7 @@
 </ul>
 </li>
 <li type="circle">mitiv.linalg.<a href="mitiv/linalg/WeightGenerator.html" title="class in mitiv.linalg"><span class="strong">WeightGenerator</span></a></li>
+<li type="circle">mitiv.microscopy.<a href="mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy"><span class="strong">WideFieldModel</span></a></li>
 <li type="circle">mitiv.microscopy.<a href="mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy"><span class="strong">Zernike</span></a></li>
 </ul>
 </li>
